feat(testcase): add minimal generation flow